--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -171,6 +171,7 @@
 // Preferences items
 "Preferences" = "Einstellungen";
 "General" = "Allgemein";
+"Appearance" = "Appearance"; // NEW
 "Shortcuts" = "Verknüpfungen";
 "File Types" = "Dateitypen";
 "Video" = "Video";
