--- a/de.lproj/preferencesAdvancedViewController.strings
+++ b/de.lproj/preferencesAdvancedViewController.strings
@@ -45,4 +45,4 @@
 "GTf-ff-aln.title" = "Die macOS-Engine Bevorzugen";
 
 /* Class = "NSButtonCell"; title = "Always use built-in"; ObjectID = "vCw-yg-L16"; */
-"vCw-yg-L16.title" = "Verwenden Sie immer integrierte";
+"kX7-LK-XlL.title" = "Verwenden Sie immer integrierte";
