--- a/en.lproj/preferencesAdvancedViewController.strings
+++ b/en.lproj/preferencesAdvancedViewController.strings
@@ -45,4 +45,4 @@
 "GTf-ff-aln.title" = "Prefer macOS engine";
 
 /* Class = "NSButtonCell"; title = "Always use built-in"; ObjectID = "vCw-yg-L16"; */
-"vCw-yg-L16.title" = "Always use built-in";
+"kX7-LK-XlL.title" = "Always use built-in";
