--- a/ru.lproj/preferencesAdvancedViewController.strings
+++ b/ru.lproj/preferencesAdvancedViewController.strings
@@ -45,4 +45,4 @@
 "GTf-ff-aln.title" = "Предпочитать встроенный в macOS";
 
 /* Class = "NSButtonCell"; title = "Always use built-in"; ObjectID = "vCw-yg-L16"; */
-"vCw-yg-L16.title" = "Всегда использовать встроенный";
+"kX7-LK-XlL.title" = "Всегда использовать встроенный";
