--- a/bg.lproj/Localizable.strings
+++ b/bg.lproj/Localizable.strings
@@ -170,6 +170,7 @@
 // Preferences items
 "Preferences" = "Preferences";
 "General" = "General";
+"Appearance" = "Appearance";
 "Shortcuts" = "Shortcuts";
 "File Types" = "File Types";
 "Video" = "Video";
